# xmath

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  index.html  search-index.js
.github/workflows/: ci.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.Div.js  trait.DivAssign.js  trait.Index.js  trait.Mul.js  trait.MulAssign.js  trait.Neg.js  trait.Sub.js  trait.SubAssign.js
implementors/xmath/: trait.Vector.js
src/: lib.rs  matrix.rs  vector.rs
src/xmath/src/: lib.rs.html  matrix.rs.html  vector.rs.html
tests/: matrix.rs  vector.rs
xmath/: index.html  sidebar-items.js  struct.Matrix.html  struct.Vector2.html  struct.Vector3.html  struct.Vector4.html  trait.Vector.html
xmath/matrix/: struct.Matrix.html
xmath/vector/: sidebar-items.js  struct.Vector2.html  struct.Vector3.html  struct.Vector4.html  trait.Vector.html
