[package]
name = "xmath"
version = "0.2.0"
authors = ["Seulgi Kim <dev@seulgi.kim>", "Hyeon Kim <simnalamburt@gmail.com>"]

homepage      = "https://github.com/simnalamburt/xmath"
repository    = "https://github.com/simnalamburt/xmath"
documentation = "https://simnalamburt.github.com/xmath/"
license       = "BSD-2-Clause"
keywords      = ["math", "linear", "algebra", "matrix", "vector"]
readme        = "README.md"

description   = """
Rust port of Microsoft DirectXMath
"""

[dependencies]
glium = { version = "0.7", default-features = false }
